# IBM-capstone-project

./: README.md
Backend/: .env.example  README.md  main.py  pyproject.toml
Backend/agent/: __init__.py  models.py  prompts.py  tools.py  workflow.py
Backend/agent/utils/: data_format.py
Backend/data/: pengeluaran.csv
Backend/notebook/: create_data.ipynb
Frontend/: .gitignore
Frontend/app/: layout.tsx  page.tsx
